<resources>
    <string name="app_name">GuitarShopMobile</string>
    <string name="профил_здр">Здравей!</string>
    <string name="баланс">Баланс:</string>
    <string name="pick_a_profile_picture">Pick a profile picture</string>
    <string name="register">Register</string>
    <string name="login">LOGIN</string>
    <string name="password">Password</string>
    <string name="username">Username</string>
    <string name="LOGIN">LOGIN</string>
    <string name="logo">LOGO</string>
    <string name="sign_up_with_facebook">Sign up with Facebook</string>
    <string name="sign_up_with_google">Sign up with Google</string>
    <string name="sign_up_with_instagram">Sign up with Instagram</string>
    <string name="sign_up">Sign up</string>
    <string name="sign_up_with">sign up with:</string>
    <string name="re_enter_password">Re-enter password</string>
    <string name="email">Email</string>

    <string-array name="quantity_string_array">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5(MAX)</item>
    </string-array>
</resources>