<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <RelativeLayout
        android:id="@+id/login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="35dp"
        android:layout_marginTop="36dp"
        android:layout_marginBottom="35dp"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        >

        <EditText
            android:id="@+id/username"
            android:layout_width="300dp"
            android:layout_height="48dp"
            android:hint="@string/username"
            android:textColorHint="@color/white"

            android:layout_centerHorizontal="true"
            android:textColor="@color/white"
            android:drawableStart="@drawable/baseline_person_24_white"
            android:textAlignment="center"
            android:inputType="textPersonName"
            android:autofillHints="name">

        </EditText>
        <EditText
            android:id="@+id/password"
            android:layout_width="300dp"
            android:layout_height="48dp"
            android:hint="@string/password"
            android:textColorHint="@color/white"
            android:textColor="@color/white"
            android:layout_below="@id/username"
            android:layout_centerHorizontal="true"
            android:drawableStart="@drawable/baseline_lock_24_white"
            android:textAlignment="center"
            android:inputType="textPassword">

        </EditText>




        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/Login_button"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:contentDescription="@string/login"
            android:fontFamily="@font/darkson_regular"
            android:text="@string/login"
            android:textColor="@color/black"
            android:textSize="30sp"
            android:layout_centerHorizontal="true"
            android:layout_below="@id/password"
            android:layout_marginTop="15dp"/>




        <TextView
            android:id="@+id/or"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/Login_button"
            android:layout_centerHorizontal="true"
            android:fontFamily="@font/darkson_regular"
            android:text="OR"
            android:textColor="@color/white"
            android:textSize="30sp">

        </TextView>

        <TextView
            android:id="@+id/sign_up_with"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/or"
            android:layout_centerHorizontal="true"
            android:text="@string/sign_up_with"
            android:textColor="@color/white">

        </TextView>

        <androidx.appcompat.widget.AppCompatButton
            android:layout_marginVertical="15dp"
            android:id="@+id/google_btn"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_below="@id/sign_up_with"
            android:layout_marginTop="6dp"
            android:adjustViewBounds="true"
            android:drawableStart="@drawable/google"
            android:text="@string/sign_up_with_google"
            android:background="@drawable/google_btn"
            android:textColor="@color/black"
            android:paddingStart="20dp"
            android:paddingEnd="20dp">

        </androidx.appcompat.widget.AppCompatButton>
    </RelativeLayout>





</LinearLayout>