<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/gradient"
    android:theme="@style/Theme.AppCompat.DayNight.NoActionBar">

    <ImageView
        android:id="@+id/Logo"
        android:layout_width="340dp"
        android:layout_height="284dp"
        android:layout_marginTop="70dp"
        android:contentDescription="@string/logo"
        app:srcCompat="@drawable/jackson_king_v_white_onblack_removebg_preview"
        android:layout_centerHorizontal="true">

    </ImageView>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_below="@id/Logo"
        android:fontFamily="@font/darkson_regular">

        <com.google.android.material.tabs.TabLayout
            android:id="@+id/tab_layout"
            android:layout_gravity="center"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:fontFamily="@font/darkson_regular"
            app:tabTextColor="@color/white"
            app:tabTextAppearance="@style/tab_text"
            app:tabIndicatorHeight="3dp"
            app:tabIndicatorAnimationDuration="@integer/material_motion_duration_medium_1"
            app:tabIndicatorColor="@color/Bright_yellow"
            android:background="#00000000"
            >

            <com.google.android.material.tabs.TabItem
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/login"

                >

            </com.google.android.material.tabs.TabItem>
            <com.google.android.material.tabs.TabItem
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/sign_up">

            </com.google.android.material.tabs.TabItem>
        </com.google.android.material.tabs.TabLayout>

    <androidx.viewpager2.widget.ViewPager2
        android:layout_width="match_parent"
        android:id="@+id/pager"
        android:layout_height="match_parent">


    </androidx.viewpager2.widget.ViewPager2>

    </LinearLayout>

</RelativeLayout>

