<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <RelativeLayout
        android:layout_width="340dp"
        android:layout_height="380dp"
        android:background="@drawable/layout_shape"
        android:layout_gravity="center"
        android:layout_marginTop="10dp">

    <EditText
        android:id="@+id/email"
        android:layout_width="300dp"
        android:layout_height="60dp"
        android:hint="@string/email"
        android:drawableStart="@drawable/baseline_email_24_white_30dp"
        android:layout_marginTop="15dp"
        android:textColor="@color/white"
        android:background="@drawable/edit_text_layout"
        android:textColorHint="@color/white"
        android:layout_centerHorizontal="true"
        android:textAlignment="center"
        android:paddingStart="10dp"
        android:paddingEnd="30dp"
        android:inputType="textEmailAddress">

    </EditText>
    <EditText
        android:id="@+id/username"
        android:layout_width="300dp"
        android:layout_height="60dp"
        android:hint="@string/username"
        android:drawableStart="@drawable/baseline_person_24_30dp"
        android:layout_marginTop="15dp"
        android:textColor="@color/white"
        android:background="@drawable/edit_text_layout"
        android:textColorHint="@color/white"
        android:layout_centerHorizontal="true"
        android:textAlignment="center"
        android:paddingStart="10dp"
        android:paddingEnd="30dp"
        android:layout_below="@id/email"
        android:inputType="text">

    </EditText>
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/password_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/username"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="15dp"
        android:textColorHint="@color/white"

        android:textAlignment="center"
        app:passwordToggleEnabled="true"
        app:passwordToggleTint="@color/white"
        app:hintEnabled="false"


        >
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/password"
            android:layout_width="300dp"
            android:layout_height="60dp"
            android:drawableStart="@drawable/baseline_lock_24_30dp"
            android:layout_marginTop="15dp"
            android:textColor="@color/white"
            android:background="@drawable/edit_text_layout"
            android:textColorHint="@color/white"
            android:layout_centerHorizontal="true"
            android:textAlignment="center"
            android:paddingStart="10dp"
            android:paddingEnd="30dp"
            android:layout_below="@id/username"
            android:inputType="textPassword"
            android:gravity="center"
            android:hint="@string/password"
            >

        </com.google.android.material.textfield.TextInputEditText>
    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/reenter_password_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/password_layout"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="15dp"
        android:textColorHint="@color/white"
        app:passwordToggleEnabled="true"
        app:passwordToggleTint="@color/white"
        app:hintEnabled="false">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/reenter_password"
            android:layout_width="300dp"
            android:layout_height="60dp"
            android:hint="@string/re_enter_password"
            android:drawableStart="@drawable/baseline_lock_24_30dp"
            android:layout_marginTop="15dp"
            android:textColor="@color/white"
            android:background="@drawable/edit_text_layout"
            android:textColorHint="@color/white"
            android:layout_centerHorizontal="true"
            android:textAlignment="center"
            android:paddingStart="10dp"
            android:paddingEnd="30dp"
            android:layout_below="@id/password"
            android:inputType="textPassword"
            android:gravity="center">

        </com.google.android.material.textfield.TextInputEditText>
    </com.google.android.material.textfield.TextInputLayout>
    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/signup_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/reenter_password_layout"
        android:layout_centerHorizontal="true"
        android:text="@string/sign_up"
        android:background="@drawable/buttons"
        android:textColor="@color/white"
        android:layout_marginTop="12dp">

    </androidx.appcompat.widget.AppCompatButton>
    </RelativeLayout>
</LinearLayout>